# applied-robotics-lab-2

./: README.md
polaris_config/: CMakeLists.txt  package.xml
polaris_config/launch/: polaris.launch.yaml
polaris_config/share/: polaris_config.json
robot_kin_validation/: CMakeLists.txt  package.xml
robot_kin_validation/include/robot_kin_validation/: robot_kin_validation.h
robot_kin_validation/launch/: robot_kin_validation.launch.py
robot_kin_validation/src/: robot_kin_validation.cpp
